Add final things

--- a/ksbc/static/css/main.css
+++ b/ksbc/static/css/main.css
@@ -117,7 +117,7 @@
   }
   
   .breadcrumbs h2 {
-    font-size: 56px;
+    font-size: 40px;
     font-weight: 500;
     color: #fff;
     font-family: var(--font-secondary);
@@ -246,30 +246,29 @@
   # Header
   --------------------------------------------------------------*/
   .header {
+    position: relative;
     z-index: 997;
-    position: absolute;
-    padding: 30px 0;
+    z-index: 997;
+    padding: 0px 0;
     top: 0;
     left: 0;
     right: 0;
+    background: #fff;
+    transition: all 0.5s;
+    height: 90px;
+    border-bottom: 1px solid #fff;
   }
   
   .header .logo img {
-    max-height: 40px;
-    margin-right: 6px;
+    max-height: 30px;
   }
-  
-  .header .logo h1 {
-    font-size: 24px;
-    font-weight: 700;
-    color: #fff;
-    margin-bottom: 0;
-    font-family: var(--font-primary);
+
+  .header .logo{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
   }
-  
-  .header .logo h1 span {
-    color: var(--color-primary);
-  }
+
   
   /*--------------------------------------------------------------
   # Desktop Navigation
@@ -282,6 +281,7 @@
     .navbar {
       padding: 0;
     }
+ 
   
     .navbar ul {
       margin: 0;
@@ -307,9 +307,9 @@
       justify-content: space-between;
       padding: 0 3px;
       font-family: var(--font-primary);
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 500;
-      color: rgba(255, 255, 255, 0.6);
+      color: black;
       text-transform: uppercase;
       white-space: nowrap;
       transition: 0.3s;
@@ -347,7 +347,7 @@
     .navbar .active,
     .navbar .active:focus,
     .navbar li:hover>a {
-      color: #fff;
+      color: var(--color-primary);
     }
   
     .navbar .dropdown ul {
@@ -415,6 +415,10 @@
     .navbar .dropdown .dropdown:hover>ul {
       left: -100%;
     }
+  }
+  .mobile-nav-toggle{
+    position: fixed; 
+    left: 80%; /* Position it on the right */
   }
   
   @media (min-width: 1280px) {
@@ -497,7 +501,7 @@
   
     .mobile-nav-show {
       position: relative;
-      color: #fff;
+      color: black;
       font-size: 28px;
       cursor: pointer;
       line-height: 0;
