--- a/ksbc/templates/about/board-of-directors-person-2.html
+++ b/ksbc/templates/about/board-of-directors-person-2.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Винсент Ло Венг Сенг - Совет Директоров{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Винсент Ло Венг Сенг - Совет Директоров" %}{% endblock title %}
 {% block content %}
         <!-- ======= Breadcrumbs ======= -->
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
             <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-                <h2>Совет Директоров</h2>
+                <h2>{% trans "Совет Директоров" %}</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Совет Директоров</li>
+                    <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+                    <li>{% trans "Совет Директоров" %}</li>
                 </ol>
 
             </div>
@@ -22,29 +23,20 @@
                     <div class="col-lg-6 img-bg" style="background-image: url('{% static 'img/people/person-2.jpg' %}');"
                         data-aos="zoom-in" data-aos-delay="100"></div>
                     <div class="col-lg-5 d-flex flex-column justify-content-center">
-                        <h3>Винсент Ло Венг Сенг</h3>
-                        <h5>Заместитель председателя, директор</h5>
+                        <h3>{% trans "Винсент Ло Венг Сенг" %}</h3>
+                        <h5>{% trans "Заместитель председателя, директор" %}</h5>
                         <h5>vincent.loh@ksbc.sg</h5>
-                        <p>Винсент Ло в качестве генерального директора CPG International Pte Ltd возглавляет
-                            международное подразделение CPG Corporation Pte Ltd, а в качестве исполнительного
-                            вице-президента по развитию бизнеса CPG Corporation Pte Ltd курирует деятельность CPG по
-                            развитию бизнеса по всему миру. <br><br>
-                            Винсент наладил прочные отношения с клиентами в Китае, на
-                            Ближнем Востоке, в Индии, на Шри-Ланке, в Северной Азии, в АСЕАН и Сингапуре.
+                        <p>{% trans "Винсент Ло в качестве генерального директора CPG International Pte Ltd возглавляет международное подразделение CPG Corporation Pte Ltd, а в качестве исполнительного вице-президента по развитию бизнеса CPG Corporation Pte Ltd курирует деятельность CPG по развитию бизнеса по всему миру." %} <br><br>
+                            {% trans "Винсент наладил прочные отношения с клиентами в Китае, на Ближнем Востоке, в Индии, на Шри-Ланке, в Северной Азии, в АСЕАН и Сингапуре." %}
                             <br>
                             <br>
 
-                            Винсент является зарегистрированным профессионалом и дипломированным инженером-строителем с
-                            более чем тридцатилетним опытом работы. Он лично принимал участие в различных проектах - от
-                            сверхвысоких башен до сложных проектов в области химии, микроэлектроники, фармацевтики и
-                            комплексной инфраструктуры гражданского строительства в Сингапуре и за рубежом.
+                            {% trans "Винсент является зарегистрированным профессионалом и дипломированным инженером-строителем с более чем тридцатилетним опытом работы. Он лично принимал участие в различных проектах - от сверхвысоких башен до сложных проектов в области химии, микроэлектроники, фармацевтики и комплексной инфраструктуры гражданского строительства в Сингапуре и за рубежом." %}
                             <br>
                             <br>
 
-                            Он использует свой многолетний опыт, включая последние 10 лет работы в высшем руководстве,
-                            чтобы вдохновлять и передавать навыки и передовой опыт следующему поколению руководителей и
-                            не только.
-                            <br>
+                            {% trans "Он использует свой многолетний опыт, включая последние 10 лет работы в высшем руководстве, чтобы вдохновлять и передавать навыки и передовой опыт следующему поколению руководителей и не только." %}
+                            <br><br><br><br><br><br><br>
                             <br>
 
                         </p>
