--- a/ksbc/templates/about/board-of-directors-person-5.html
+++ b/ksbc/templates/about/board-of-directors-person-5.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Шон Со Чун Чонг - Совет Директоров{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Шон Со Чун Чонг - Совет Директоров" %}{% endblock title %}
 {% block content %}
         <!-- ======= Breadcrumbs ======= -->
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
             <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-                <h2>Совет Директоров</h2>
+                <h2>{% trans "Совет Директоров" %}</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Совет Директоров</li>
+                    <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+                    <li>{% trans "Совет Директоров" %}</li>
                 </ol>
 
             </div>
@@ -22,22 +23,14 @@
                     <div class="col-lg-6 img-bg" style="background-image: url('{% static 'img/people/person-5.jpg' %}');"
                         data-aos="zoom-in" data-aos-delay="100"></div>
                     <div class="col-lg-5 d-flex flex-column justify-content-center">
-                        <h3>Шон Со Чун Чонг</h3>
-                        <h5>Директор</h5>
+                        <h3>{% trans "Шон Со Чун Чонг" %}</h3>
+                        <h5>{% trans "Директор" %}</h5>
                         <h5>sean.soh@ksbc.sg</h5>
-                        <p>Будучи вице-президентом CPG International, Шон Со играет важную роль в реализации стратегий и
-                            создании возможностей для глобального развития бизнеса и значимого сотрудничества. <br><br>Опираясь
-                            на мощную сеть, Шон наладил прочные отношения с клиентами в Китае, на Ближнем Востоке, в
-                            Бангладеш, Шри-Ланке, Индонезии, Малайзии и Сингапуре.<br><br>
+                        <p>{% trans "Будучи вице-президентом CPG International, Шон Со играет важную роль в реализации стратегий и создании возможностей для глобального развития бизнеса и значимого сотрудничества. <br><br>Опираясь на мощную сеть, Шон наладил прочные отношения с клиентами в Китае, на Ближнем Востоке, в Бангладеш, Шри-Ланке, Индонезии, Малайзии и Сингапуре." %}<br><br>
 
-                            Шон окончил университет со степенью бакалавра в области математики и экономики. Он возглавил
-                            первую инвестицию CPG в Японии и с тех пор работал с многопрофильными командами над
-                            разнообразным портфелем проектов, включая медицинские учреждения, проекты фармацевтического
-                            типа и проекты инфраструктуры гражданского строительства в Сингапуре и за рубежом.<br><br>
+                            {% trans "Шон окончил университет со степенью бакалавра в области математики и экономики. Он возглавил первую инвестицию CPG в Японии и с тех пор работал с многопрофильными командами над разнообразным портфелем проектов, включая медицинские учреждения, проекты фармацевтического типа и проекты инфраструктуры гражданского строительства в Сингапуре и за рубежом." %}<br><br>
 
-                            Опираясь на 13-летний опыт, Шон использует свое глубокое понимание международной
-                            бизнес-арены, чтобы продолжать помогать своим клиентам и партнерам добиваться устойчивого
-                            роста бизнеса.<br><br><br><br></p>
+                            {% trans "Опираясь на 13-летний опыт, Шон использует свое глубокое понимание международной бизнес-арены, чтобы продолжать помогать своим клиентам и партнерам добиваться устойчивого роста бизнеса." %}<br><br><br><br><br><br><br><br></p>
                     </div>
                 </div>
             </div>
