--- a/ksbc/templates/about/board-of-directors-person-6.html
+++ b/ksbc/templates/about/board-of-directors-person-6.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Кенни Нг - Совет Директоров{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Кенни Нг - Совет Директоров" %}{% endblock title %}
 {% block content %}
 
         <!-- ======= Breadcrumbs ======= -->
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
             <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-                <h2>Совет Директоров</h2>
+                <h2>{% trans "Совет Директоров" %}</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Совет Директоров</li>
+                    <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+                    <li>{% trans "Совет Директоров" %}</li>
                 </ol>
 
             </div>
@@ -23,31 +24,16 @@
                     <div class="col-lg-6 img-bg" style="background-image: url('{% static 'img/people/person-6.jpg' %}');"
                         data-aos="zoom-in" data-aos-delay="100"></div>
                     <div class="col-lg-5 d-flex flex-column justify-content-center">
-                        <h3>Кенни Нг</h3>
-                        <h5>Директор и Казначей</h5>
+                        <h3>{% trans "Кенни Нг" %}</h3>
+                        <h5>{% trans "Директор и Казначей" %}</h5>
                         <h5>kenny.ng@ksbc.sg</h5>
-                        <p>Кенни Нг является управляющим директором Oakwood & Drehem Capital Pte Ltd и Vaulte Capital,
-                            компаний, специализирующихся на соблюдении конкурентных требований, корпоративных финансах и
-                            экспертной оценке, с признанным присутствием на ключевых рынках Юго-Восточной Азии.<br><br>
+                        <p>{% trans "Кенни Нг является управляющим директором Oakwood & Drehem Capital Pte Ltd и Vaulte Capital, компаний, специализирующихся на соблюдении конкурентных требований, корпоративных финансах и экспертной оценке, с признанным присутствием на ключевых рынках Юго-Восточной Азии." %}<br><br>
 
-                            Он принимал участие во всех этапах развития компании с момента ее основания в 2018 году. В
-                            настоящее время фирма стремится раскрыть потенциальную ценность для корпораций путем анализа
-                            и детальной оценки, включая услуги по слияниям и поглощениям, корпоративному сбору средств,
-                            финансовой экспертизе и моделированию, доступу на рынок, консультированию перед IPO, а также
-                            оценке нематериальных активов и бизнеса. Как директор, Кенни отвечает за общую стратегию,
-                            развитие бизнеса и управление компаниями.<br><br>
+                            {% trans "Он принимал участие во всех этапах развития компании с момента ее основания в 2018 году. В настоящее время фирма стремится раскрыть потенциальную ценность для корпораций путем анализа и детальной оценки, включая услуги по слияниям и поглощениям, корпоративному сбору средств, финансовой экспертизе и моделированию, доступу на рынок, консультированию перед IPO, а также оценке нематериальных активов и бизнеса. Как директор, Кенни отвечает за общую стратегию, развитие бизнеса и управление компаниями." %}<br><br>
 
-                            Кенни - сертифицированный дипломированный бухгалтер с более чем 10-летним опытом работы в
-                            сфере финансового партнерства, управления полным спектром финансовых операций, финансовой
-                            отчетности, бизнес-анализа, финансовых преобразований и улучшений, внутреннего контроля и
-                            соблюдения нормативных требований, казначейства, аудита и налогообложения.<br><br>
+                            {% trans "Кенни - сертифицированный дипломированный бухгалтер с более чем 10-летним опытом работы в сфере финансового партнерства, управления полным спектром финансовых операций, финансовой отчетности, бизнес-анализа, финансовых преобразований и улучшений, внутреннего контроля и соблюдения нормативных требований, казначейства, аудита и налогообложения." %}<br><br>
 
-                            Он считается сертифицированным практикующим бухгалтером (Австралия) и имеет
-                            квалифицированные профессиональные степени Ассоциации международных бухгалтеров (AIA) и
-                            Малайзийского института бухгалтеров (MIA). Кенни Нг активно участвует в поддержке частного
-                            сектора, содействуя приобретению акционерного капитала, торговле и инвестициям в АСЕАН на
-                            протяжении последних 18 лет. Будучи опытным специалистом по корпоративным финансам, он
-                            твердо верит в построение надежных деловых партнерств.<br><br></p>
+                            {% trans "Он считается сертифицированным практикующим бухгалтером (Австралия) и имеет квалифицированные профессиональные степени Ассоциации международных бухгалтеров (AIA) и Малайзийского института бухгалтеров (MIA). Кенни Нг активно участвует в поддержке частного сектора, содействуя приобретению акционерного капитала, торговле и инвестициям в АСЕАН на протяжении последних 18 лет. Будучи опытным специалистом по корпоративным финансам, он твердо верит в построение надежных деловых партнерств." %}<br><br></p>
                     </div>
                 </div>
             </div>
