--- a/ksbc/templates/about/mission.html
+++ b/ksbc/templates/about/mission.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Миссия{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Миссия" %}{% endblock title %}
 {% block content %}
 {% load static %}
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Миссия</h2>
+            <h2>{% trans "Миссия" %}</h2>
             <ol>
-            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-            <li>Миссия</li>
+            <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+            <li>{% trans "Миссия" %}</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
@@ -18,32 +19,32 @@
             <article class="blog-details">
                 <div class="content">
                     <p>
-                        С большим энтузиазмом и чувством долга мы обращаемся к вам сегодня, чтобы рассказать о решающей роли Казахстанско-Сингапурского делового совета (KSBC) в развитии и укреплении бесценных деловых отношений между нашими уважаемыми сообществами. С непоколебимой преданностью делу KSBC стремится создать процветающий альянс между корпоративными структурами и отдельными членами, родом как из Казахстана, так и из Сингапура, преодолевая границы для содействия совместному росту и процветанию.
+                        {% trans "С большим энтузиазмом и чувством долга мы обращаемся к вам сегодня, чтобы рассказать о решающей роли Казахстанско-Сингапурского делового совета (KSBC) в развитии и укреплении бесценных деловых отношений между нашими уважаемыми сообществами. С непоколебимой преданностью делу KSBC стремится создать процветающий альянс между корпоративными структурами и отдельными членами, родом как из Казахстана, так и из Сингапура, преодолевая границы для содействия совместному росту и процветанию." %}
                         <br><br>
-                        В основе нашей миссии лежит твердая вера в то, что успех наших начинаний будет иметь далеко идущие последствия для дальнейшего процветания обеих стран. Мы признаем, что в условиях быстро меняющегося глобального экономического ландшафта сотрудничество между странами является ключом к открытию новых рубежей роста. KSBC становится маяком синергии, используя присущие нашим членам сильные стороны и опыт, чтобы проложить путь к взаимовыгодному будущему.
+                        {% trans "В основе нашей миссии лежит твердая вера в то, что успех наших начинаний будет иметь далеко идущие последствия для дальнейшего процветания обеих стран. Мы признаем, что в условиях быстро меняющегося глобального экономического ландшафта сотрудничество между странами является ключом к открытию новых рубежей роста. KSBC становится маяком синергии, используя присущие нашим членам сильные стороны и опыт, чтобы проложить путь к взаимовыгодному будущему." %}
                         <br><br>
-                        Предоставляя платформу для налаживания связей и взаимодействия, KSBC выступает в качестве моста, соединяющего казахстанских и сингапурских предпринимателей, бизнес-структуры и профессионалов. С помощью наших тщательно организованных мероприятий, конференций и отраслевых встреч мы стремимся способствовать обмену знаниями, стратегическому партнерству и инвестиционным возможностям. Придерживаясь духа инклюзивности, мы поддерживаем разнообразие и культурный обмен, способствуя богатому набору идей и инновационному мышлению.
+                        {% trans "Предоставляя платформу для налаживания связей и взаимодействия, KSBC выступает в качестве моста, соединяющего казахстанских и сингапурских предпринимателей, бизнес-структуры и профессионалов. С помощью наших тщательно организованных мероприятий, конференций и отраслевых встреч мы стремимся способствовать обмену знаниями, стратегическому партнерству и инвестиционным возможностям. Придерживаясь духа инклюзивности, мы поддерживаем разнообразие и культурный обмен, способствуя богатому набору идей и инновационному мышлению." %}
                         <br><br>
-                        Важно признать, что успех KSBC идет рука об руку с процветанием наших компаний-членов и частных лиц. Наша приверженность построению долгосрочных отношений основана на принципах доверия, прозрачности и этичного поведения. Придерживаясь самых высоких стандартов деловой этики, мы стремимся создавать альянсы, построенные на прочном фундаменте добросовестности и добросовестных практик.
+                        {% trans "Важно признать, что успех KSBC идет рука об руку с процветанием наших компаний-членов и частных лиц. Наша приверженность построению долгосрочных отношений основана на принципах доверия, прозрачности и этичного поведения. Придерживаясь самых высоких стандартов деловой этики, мы стремимся создавать альянсы, построенные на прочном фундаменте добросовестности и добросовестных практик." %}
                         <br><br>
-                        Поскольку мы вместе движемся к будущему совместного роста, мы призываем всех членов активно участвовать в различных инициативах и форумах, которые предлагает KSBC. Ваше участие не только укрепит перспективы вашего собственного бизнеса, но и внесет вклад в общее развитие Казахстана и Сингапура как процветающих экономических центров.
+                        {% trans "Поскольку мы вместе движемся к будущему совместного роста, мы призываем всех членов активно участвовать в различных инициативах и форумах, которые предлагает KSBC. Ваше участие не только укрепит перспективы вашего собственного бизнеса, но и внесет вклад в общее развитие Казахстана и Сингапура как процветающих экономических центров." %}
                         <br><br>
                         <blockquote>
                             <p>
-                                KSBC будет развивать и укреплять бесценные деловые отношения между этим сообществом корпоративных и индивидуальных членов как из Казахстана, так и из Сингапура. 
+                                {% trans "KSBC будет развивать и укреплять бесценные деловые отношения между этим сообществом корпоративных и индивидуальных членов как из Казахстана, так и из Сингапура. " %}
                                 <br><br>
-                                Успех нашей миссии и цели только обеспечит дальнейшее процветание обеих стран!
+                                {% trans "Успех нашей миссии и цели только обеспечит дальнейшее процветание обеих стран!" %}
                                 <br><br>
-                                - Султан Маренов 
+                                - {% trans "Султан Маренов" %} 
                             </p>
                         </blockquote>
-                        В заключение, позвольте нам подтвердить нашу приверженность благородной миссии, которую представляет KSBC, - укреплению связей между Казахстаном и Сингапуром посредством взаимосвязанной сети деловых возможностей и плодотворного сотрудничества. Уверенно шагая в будущее, мы уверены, что коллективные усилия наших членов станут катализатором достижения беспрецедентного успеха и процветания.
+                        {% trans "В заключение, позвольте нам подтвердить нашу приверженность благородной миссии, которую представляет KSBC, - укреплению связей между Казахстаном и Сингапуром посредством взаимосвязанной сети деловых возможностей и плодотворного сотрудничества. Уверенно шагая в будущее, мы уверены, что коллективные усилия наших членов станут катализатором достижения беспрецедентного успеха и процветания." %}
                         <br><br>
-                        Благодарим Вас за вашу неизменную поддержку и участие в Казахстанско-Сингапурском деловом совете. Вместе мы напишем захватывающую историю успеха на века.
+                        {% trans "Благодарим Вас за вашу неизменную поддержку и участие в Казахстанско-Сингапурском деловом совете. Вместе мы напишем захватывающую историю успеха на века." %}
                         <br><br>
-                        Искренне,
+                        {% trans "Искренне," %}
                         <br><br>
-                        Секретариат KSBC
+                        {% trans "Секретариат KSBC" %}
                     </p>
                 </div>
             </article>
@@ -57,7 +58,7 @@
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Партнеры</h2>
+          <h2>{% trans "Партнеры" %}</h2>
         </div>
         <section id='clients' class="clients">
             <div class="container" data-aos="zoom-in">
@@ -93,7 +94,7 @@
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Стратегические партнеры</h2>
+          <h2>{% trans "Стратегические партнеры" %}</h2>
         </div>
         <section id='clients' class="clients">
             <div class="container" data-aos="zoom-in">
