--- a/ksbc/templates/membership/membership_list.html
+++ b/ksbc/templates/membership/membership_list.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Резиденство{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Резиденство" %}{% endblock title %}
 {% block content %}
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Резиденство</h2>
+            <h2>{% trans "Резиденство" %}</h2>
             <ol>
-            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-            <li>Резиденство</li>
+            <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+            <li>{% trans "Резиденство" %}</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
@@ -17,7 +18,7 @@
     <div id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
             <div class="section-header">
-                <h2>Выберите тип резиденства</h2>
+                <h2>{% trans "Выберите тип резиденства" %}</h2>
             </div>
         </div>
     </div>
@@ -30,16 +31,16 @@
                         <div class="col-lg-4 col-md-6 mt-4 mt-md-0 pb-4">
                             <div class="box featured">
                                 <h3>{{ object.membership_type}}</h3>
-                                <h4><sup>$</sup>{{ object.price }}<span> / год</span></h4>
+                                <h4><sup>$</sup>{{ object.price }}<span> / {% trans "год" %}</span></h4>
                                 <form method='POST' action='{% url 'membership:membership-list' %}'>
                                     {% csrf_token %}
                                     {% if object.membership_type != current_membership %}
                                         <div class="btn-wrap">
-                                            <button class="btn-buy">Узнать больше</button>
+                                            <button class="btn-buy">{% trans "Узнать больше" %}</button>
                                         </div>
                                     {% else %}
                                         <div class="btn-wrap">
-                                            <span>Это ваше текущее резиденство</span>
+                                            <span>{% trans "Это ваше текущее резиденство" %}</span>
                                         </div>
                                     {% endif %}
                                     <input type='hidden' name='membership_type' value='{{ object.membership_type }}'>
