--- a/ksbc/templates/membership/membership_payment.html
+++ b/ksbc/templates/membership/membership_payment.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 {% block title %}{{ selected_membership.membership_type }}{% endblock title %}
 {% block content %}
     <!-- ======= Breadcrumbs ======= -->
@@ -7,8 +8,8 @@
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
             <h2>{{ selected_membership.membership_type }}</h2>
             <ol>
-            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-            <li>Резиденство</li>
+            <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+            <li>{% trans "Резиденство" %}</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
@@ -18,51 +19,50 @@
         <div class="row g-5">
           <div class="col-lg-6">
             <article class="blog-details">
-              <h2 class="title">Польза резиденства в KSBC</h2>
+              <h2 class="title">{% trans "Польза резиденства в KSBC" %}</h2>
               <div class="content">
                 <ul>
-                  <li>Актуальная информация о наиболее интересных бизнес-проектах в Казахстане.</li>
-                  <li>Бизнес-дайджест, охватывающий рынки Казахстана, Сингапура и Юго-Восточной Азии на ежеквартальной основе (позже ежемесячно).</li>
-                  <li>Налаживание связей и поиск деловых партнеров. Деловые и светские мероприятия.</li>
-                  <li>Информация о различных конференциях и форумах в обеих странах. Приглашение и участие.</li>
-                  <li>Бизнес-аналитика.</li>
-                  <li>Консультации по организации бизнеса (юридические и корпоративные) как в Казахстане, так и в Сингапуре.</li>
-                  <li>Продвижение различных проектов. Встречи на высоком уровне, презентации и семинары.</li>
-                  <li>Академические исследования и участие в мероприятиях в партнерстве с Сингапурским университетом менеджмента (SMU).</li>
-                  <li>Помощь в переезде в Казахстан или Сингапур.</li>
+                  <li>{% trans "Актуальная информация о наиболее интересных бизнес-проектах в Казахстане." %}</li>
+                  <li>{% trans "Бизнес-дайджест, охватывающий рынки Казахстана, Сингапура и Юго-Восточной Азии на ежеквартальной основе (позже ежемесячно)." %}</li>
+                  <li>{% trans "Налаживание связей и поиск деловых партнеров. Деловые и светские мероприятия." %}</li>
+                  <li>{% trans "Информация о различных конференциях и форумах в обеих странах. Приглашение и участие." %}</li>
+                  <li>{% trans "Бизнес-аналитика." %}</li>
+                  <li>{% trans "Консультации по организации бизнеса (юридические и корпоративные) как в Казахстане, так и в Сингапуре." %}</li>
+                  <li>{% trans "Продвижение различных проектов. Встречи на высоком уровне, презентации и семинары." %}</li>
+                  <li>{% trans "Академические исследования и участие в мероприятиях в партнерстве с Сингапурским университетом менеджмента (SMU)." %}</li>
+                  <li>{% trans "Помощь в переезде в Казахстан или Сингапур." %}</li>
                 </ul>
               </div><!-- End post content -->
             </article><!-- End blog post -->
           </div>
           <div class="col-lg-6">
-            <h3>Прежде чем оплатить резиденство, заполните форму</h3>
+            <h3>{% trans "Прежде чем оплатить резиденство, заполните форму" %}</h3>
 
             <br>
 
             <div class="btn-wrap">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdwSn7sei3eB_JMB_YpZ3270ePNasOSdAfcjE3ZEB5XN0pXBQ/viewform" class="btn-buy">Заполнить форму</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdwSn7sei3eB_JMB_YpZ3270ePNasOSdAfcjE3ZEB5XN0pXBQ/viewform" class="btn-buy">{% trans "Заполнить форму" %}</a>
             </div>
             <br>
             <form enctype="multipart/form-data" method="post" role="product_page" id="payment-form" class='btn-wrap'>
               {% csrf_token %}
-              <button type="submit" class="btn-buy" data-bind-href="pricing">Оплатить</button>
+              <button type="submit" class="btn-buy" data-bind-href="pricing">{% trans "Оплатить" %}</button>
             </form>
             <section id='blog' class='blog'>
               <article class="blog-details">
-                <h4>Для вашей любезной справки, ниже приведен список привилегий резиденства <span class='text-danger'>для всех членов KSBC:</span></h4>
+                <h4>{% trans "Для вашей любезной справки, ниже приведен список привилегий резиденства" %} <span class='text-danger'>{% trans "для всех членов KSBC:" %}</span></h4>
                 <ul>
-                  <li>Электронный сертификат участника;</li>
-                  <li>Появление на веб - странице каталога членства KSBC;s</li>
-                  <li>Возможность рекламировать и продвигать деятельность отдельных лиц / компаний на ежемесячной основе EDM KSBC;</li>
-                  <li>Воспользуйтесь специальным тарифом для участников на мероприятия KSBC с билетами.</li>
+                  <li>{% trans "Электронный сертификат участника;" %}</li>
+                  <li>{% trans "Появление на веб - странице каталога членства KSBC;" %}</li>
+                  <li>{% trans "Возможность рекламировать и продвигать деятельность отдельных лиц / компаний на ежемесячной основе EDM KSBC;" %}</li>
+                  <li>{% trans "Воспользуйтесь специальным тарифом для участников на мероприятия KSBC с билетами." %}</li>
                 </ul>
-                <h4>Только <span class='text-danger'>для Corporate Sponsor Membership</span> предусмотрены следующие дополнительные привилегии:</h4>
+                <h4>{% trans "Только" %} <span class='text-danger'>{% trans "для Corporate Sponsor Membership" %}</span> {% trans "предусмотрены следующие дополнительные привилегии:" %}</h4>
                 <ul>
-                  <li>Отображение логотипа компании во всех публикациях KSBC и письменных сообщениях, будь то в печатных
-                    изданиях или онлайн;</li>
-                  <li>Место в Исполнительном комитете для назначенного представителя</li>
-                  <li>Права на рекламу (время от времени определяются Советом директоров);</li>
-                  <li>Воспользуйтесь двумя бесплатными абонементами и специальным тарифом для участников на мероприятия KSBC по билетам.</li>
+                  <li>{% trans "Отображение логотипа компании во всех публикациях KSBC и письменных сообщениях, будь то в печатных изданиях или онлайн;" %}</li>
+                  <li>{% trans "Место в Исполнительном комитете для назначенного представителя" %}</li>
+                  <li>{% trans "Права на рекламу (время от времени определяются Советом директоров);" %}</li>
+                  <li>{% trans "Воспользуйтесь двумя бесплатными абонементами и специальным тарифом для участников на мероприятия KSBC по билетам." %}</li>
                 </ul>
               </article>
             </section>
