--- a/ksbc/templates/news/news_list.html
+++ b/ksbc/templates/news/news_list.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
-{% block title %}Новость{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Новости" %}{% endblock title %}
 {% block content %}
 {% load static %}
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-        <h2>Новости</h2>
+        <h2>{% trans "Новости" %}</h2>
         <ol>
-        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-        <li>Новости</li>
+        <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+        <li>{% trans "Новости" %}</li>
         </ol>
     </div>
 </div><!-- End Breadcrumbs -->
@@ -35,7 +36,7 @@
                             </p>
                             <hr>
 
-                            <a href="{% url 'news:news-details' news.pk %}" class="readmore stretched-link"><span>Подробнее</span><i
+                            <a href="{% url 'news:news-details' news.pk %}" class="readmore stretched-link"><span>{% trans "Подробнее" %}</span><i
                                 class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
