--- a/ksbc/templates/users/password_reset_complete.html
+++ b/ksbc/templates/users/password_reset_complete.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Восстановление пароля завершено{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Восстановление пароля завершено" %}{% endblock title %}
 {% block content %}
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Восстановление пароля завершено</h2>
+      <h2>{% trans "Восстановление пароля завершено" %}</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-        <li>Password Reset Complete</li>
+        <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+        <li>{% trans "Восстановление пароля завершено" %}</li>
       </ol>
 
     </div>
@@ -29,7 +30,7 @@
                             </div>
             
                             <p class="text-black-50 mb-5 pt-5">
-                                Ваш пароль был сохранен. Используйте его для входа.
+                                {% trans "Ваш пароль был сохранен. Используйте его для входа." %}
                             </p>               
                         </div>
                     </div>
