--- a/ksbc/templates/users/password_reset_confirm.html
+++ b/ksbc/templates/users/password_reset_confirm.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Введите новый пароль{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Введите новый пароль" %}{% endblock title %}
 {% block content %}
 {% load user_filters %}
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Введите новый пароль</h2>
+      <h2>{% trans "Введите новый пароль" %}</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-        <li>Введите новый пароль</li>
+        <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+        <li>{% trans "Введите новый пароль" %}</li>
       </ol>
 
     </div>
@@ -45,7 +46,7 @@
                             </div>
             
                             <p class="text-black-50 mb-5 pt-5">
-                                Пожалуйста, дважды введите новый пароль, чтобы мы могли убедиться, что вы ввели его правильно.
+                                {% trans "Пожалуйста, дважды введите новый пароль, чтобы мы могли убедиться, что вы ввели его правильно." %}
                             </p>
             
                             <form method="post">
@@ -53,23 +54,23 @@
                                 <input type="password" name="new_password1" class="form-control" required id="id_new_password1">
                                 <div class="form-outline form-white mb-4">
                                     <label class='form-label' for="id_new_password1">
-                                        Новый пароль
+                                        {% trans "Новый пароль" %}
                                         <span class="required text-danger">*</span>
                                     </label>
                                     <small id="id_new_password1-help" class="form-text text-muted">
-                                        <ul><li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</li><li>Ваш пароль должен содержать как минимум 8 символов.</li><li>Ваш пароль не может быть одним из широко распространённых паролей.</li><li>Ваш пароль не может состоять только из цифр.</li></ul>
+                                        <ul><li>{% trans "Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё." %}</li><li>{% trans "Ваш пароль должен содержать как минимум 8 символов." %}</li><li>{% trans "Ваш пароль не может быть одним из широко распространённых паролей." %}</li><li>{% trans "Ваш пароль не может состоять только из цифр." %}</li></ul>
                                     </small>
                                 </div>
                                 <div class="form-outline form-white mb-4">
                                     <input type="password" name="new_password2" class="form-control" required id="id_new_password2">
                                     <label class='form-label' for="id_new_password2">
-                                        Подтверждение нового пароля
+                                        {% trans "Подтверждение нового пароля" %}
                                         <span class="required text-danger">*</span>
                                     </label>
                                 </div>
                                 
                                 <button type="submit" class="btn btn-outline-danger btn-lg px-5">
-                                    Назначить новый пароль
+                                    {% trans "Назначить новый пароль" %}
                                 </button>
                             </form>
                         </div>
