--- a/ksbc/templates/users/password_reset_form.html
+++ b/ksbc/templates/users/password_reset_form.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Восстановление пароля{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Восстановление пароля" %}{% endblock title %}
 {% block content %}
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Восстановление пароля</h2>
+      <h2>{% trans "Восстановление пароля" %}</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-        <li>Восстановление пароля</li>
+        <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+        <li>{% trans "Восстановление пароля" %}</li>
       </ol>
 
     </div>
@@ -44,7 +45,7 @@
                             </div>
             
                             <p class="text-black-50 mb-5 pt-5">
-                                Забыли пароль? Введите свой адрес электронной почты ниже, и мы вышлем инструкции по настройке нового адреса электронной почты.
+                                {% trans "Забыли пароль? Введите свой адрес электронной почты ниже, и мы вышлем инструкции по настройке нового адреса электронной почты." %}
                             </p>
             
                             <form action='{% url 'users:reset_password' %}' method=POST>
@@ -52,7 +53,7 @@
                                 <div class="form-group row my-3 p-3">
                                     <input type="email" name="email" maxlength="254" class="form-control" required id="id_email">
                                     <label for="id_email">
-                                        Адрес электронной почты
+                                        {% trans "Адрес электронной почты" %}
                                         <span class="required text-danger">*</span>
                                     </label>
                                 </div>
