--- a/ksbc/templates/about/board-of-directors-person-4.html
+++ b/ksbc/templates/about/board-of-directors-person-4.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Олжас Жиенкулов - Совет Директоров{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Олжас Жиенкулов - Совет Директоров" %}{% endblock title %}
 {% block content %}
         <!-- ======= Breadcrumbs ======= -->
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
             <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-                <h2>Совет Директоров</h2>
+                <h2>{% trans "Совет Директоров" %}</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Совет Директоров</li>
+                    <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+                    <li>{% trans "Совет Директоров" %}</li>
                 </ol>
 
             </div>
@@ -22,30 +23,18 @@
                     <div class="col-lg-6 img-bg" style="background-image: url('{% static 'img/people/person-4.jpg' %}');"
                         data-aos="zoom-in" data-aos-delay="100"></div>
                     <div class="col-lg-5 d-flex flex-column justify-content-center">
-                        <h3>Олжас Жиенкулов</h3>
-                        <h5>Директор</h5>
+                        <h3>{% trans "Олжас Жиенкулов" %}</h3>
+                        <h5>{% trans "Директор" %}</h5>
                         <h5>oz@ksbc.sg</h5>
-                        <p>Олжас - предприниматель, филантроп и влиятельный инвестор с более чем 15-летним опытом работы
-                            в области управления активами, страхования, брокерской деятельности, инвестиционной
-                            стратегии, финансового моделирования, борьбы с отмыванием денег, исследований компаний и
-                            отрасли, а также due diligence. Он выпускник бизнес-школы Байеса при Лондонском городском
-                            университете.<br><br>
+                        <p>{% trans "Олжас - предприниматель, филантроп и влиятельный инвестор с более чем 15-летним опытом работы в области управления активами, страхования, брокерской деятельности, инвестиционной стратегии, финансового моделирования, борьбы с отмыванием денег, исследований компаний и отрасли, а также due diligence. Он выпускник бизнес-школы Байеса при Лондонском городском университете." %}<br><br>
 
-                            Он является основателем и генеральным директором Paladigm Capital со штаб-квартирой в
-                            Сингапуре, которая является надежным партнером для инвесторов, ищущих выгодные и прорывные
-                            инвестиционные возможности на приграничных рынках Центральной Азии и развивающихся
-                            экономиках Юго-Восточной Азии. Основанная с целью внести ясность в перенаселенный мир
-                            финансов, Paladigm Capital возглавляется опытными предпринимателями с проверенной
-                            репутацией, которые интегрируют и агрегируют инновационные финансовые решения для достижения
-                            инвестиционных целей при разумном управлении капиталом и рисками.
-                            https://www.paladigm.capital/<br><br>
+                            {% trans "Он является основателем и генеральным директором Paladigm Capital со штаб-квартирой в Сингапуре, которая является надежным партнером для инвесторов, ищущих выгодные и прорывные инвестиционные возможности на приграничных рынках Центральной Азии и развивающихся экономиках Юго-Восточной Азии. Основанная с целью внести ясность в перенаселенный мир финансов, Paladigm Capital возглавляется опытными предпринимателями с проверенной репутацией, которые интегрируют и агрегируют инновационные финансовые решения для достижения инвестиционных целей при разумном управлении капиталом и рисками. https://www.paladigm.capital/" %}<br><br>
 
-                            Основатель @ Tesla Capital Соучредитель @ UMAY Angels Club Forbes 30 до 30 лет<br><br>
+                            {% trans "Основатель @ Tesla Capital Соучредитель @ UMAY Angels Club Forbes 30 до 30 лет" %}<br><br>
 
-                            Лучший бизнес-ангел (Самый активный бизнес-ангел) по версии Центральноазиатского венчурного
-                            форума<br><br>
+                            {% trans "Лучший бизнес-ангел (Самый активный бизнес-ангел) по версии Центральноазиатского венчурного форума" %}<br><br>
 
-                            Лауреат Президентской премии за вклад в развитие бизнеса 2022</p>
+                            {% trans "Лауреат Президентской премии за вклад в развитие бизнеса 2022" %}</p><br><br>
                     </div>
                 </div>
             </div>
