--- a/ksbc/templates/about/contact-us.html
+++ b/ksbc/templates/about/contact-us.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
-{% block title %}Связаться с нами{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Связаться с нами" %}{% endblock title %}
 {% block content %}
 {% load static %}
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Связаться с нами</h2>
+        <h2>{% trans "Связаться с нами" %}</h2>
         <ol>
-        <li><a href="index.html">Главная страница</a></li>
-        <li>Связаться с нами</li>
+        <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+        <li>{% trans "Связаться с нами" %}</li>
         </ol>
     </div>
 </div><!-- End Breadcrumbs -->
@@ -21,7 +22,7 @@
             <div class="col-lg-6">
                 <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                 <i class="bi bi-map"></i>
-                <h3>Наш адрес</h3>
+                <h3>{% trans "Наш адрес" %}</h3>
                 <p>600 North Bridge Road, #10-01 Parkview Square, Singapore, 188778</p>
                 </div>
             </div><!-- End Info Item -->
@@ -29,7 +30,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-envelope"></i>
-                    <h3>Напишите нам</h3>
+                    <h3>{% trans "Напишите нам" %}</h3>
                     <p>contact@ksbc.sg</p>
                 </div>
             </div><!-- End Info Item -->
@@ -37,7 +38,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-telephone"></i>
-                    <h3>Позвоните нам</h3>
+                    <h3>{% trans "Позвоните нам" %}</h3>
                     <p>+65 93874275</p>
                 </div>
             </div><!-- End Info Item -->
