--- a/ksbc/templates/about/index.html
+++ b/ksbc/templates/about/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Главная страница{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Главная страница" %}{% endblock title %}
 {% block content %}
 {% load static %}
 <!-- ======= Hero Section ======= -->
@@ -8,10 +9,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
-                    <h2 data-aos="fade-down">Добро пожаловать в <span>KSBC</span></h2>
-                    <p data-aos="fade-up">KSBC — молодая организация, но наши члены — очень опытные предприниматели и руководители высшего звена в различных секторах экономики.</p>
-                    <a data-aos="fade-up" data-aos-delay="200" href="{% url 'membership:membership-list' %}" class="btn-get-started">Подать заявку на резиденство</a> <br>
-                    <a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:login' %}" class="btn-get-started">Войти</a>
+                    <h2 data-aos="fade-down">{% trans "Добро пожаловать в" %} <span>KSBC</span></h2>
+                    <p data-aos="fade-up">{% trans "KSBC — молодая организация, но наши члены — очень опытные предприниматели и руководители высшего звена в различных секторах экономики." %}</p>
+                    <a data-aos="fade-up" data-aos-delay="200" href="{% url 'membership:membership-list' %}" class="btn-get-started">{% trans "Подать заявку на резиденство" %}</a> <br>
+                    <a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:login' %}" class="btn-get-started">{% trans "Войти" %}</a>
                 </div>
             </div>
         </div>
@@ -39,8 +40,8 @@
 <section id="constructions" class="constructions">
     <div class="container" data-aos="fade-up">
       <div class="section-header">
-        <h2>О KSBC</h2>
-        <p data-aos="fade-up">Kazakhstan-Singapore Business Council («KSBC») — некоммерческая организация, цель которой — стать связующим звеном и катализатором двустороннего делового сотрудничества между Сингапуром и Казахстаном, помогая предприятиям и частным лицам расширять свою сеть, получать эксклюзивную информацию о рынке и добиваться успеха в обеих странах.</p>
+        <h2>{% trans "О KSBC" %}</h2>
+        <p data-aos="fade-up">{% trans "Kazakhstan-Singapore Business Council («KSBC») — некоммерческая организация, цель которой — стать связующим звеном и катализатором двустороннего делового сотрудничества между Сингапуром и Казахстаном, помогая предприятиям и частным лицам расширять свою сеть, получать эксклюзивную информацию о рынке и добиваться успеха в обеих странах." %}</p>
       </div>
 
       <!-- ======= Alt Services Section ======= -->
@@ -51,39 +52,39 @@
             data-aos-delay="100"></div>
             <div class="col-lg-5 d-flex flex-column justify-content-center">
                 <h3>Kazakhstan Singapore Business Council</h3>
-                <p>Некоммерческая организация, целью которой является стать связующим звеном и катализатором двустороннего делового сотрудничества между Сингапуром и Казахстаном, помогая предприятиям и частным лицам расширять свою сеть, получать эксклюзивную рыночную информацию и добиваться успеха в обеих странах.
+                <p>{% trans "Некоммерческая организация, целью которой является стать связующим звеном и катализатором двустороннего делового сотрудничества между Сингапуром и Казахстаном, помогая предприятиям и частным лицам расширять свою сеть, получать эксклюзивную рыночную информацию и добиваться успеха в обеих странах." %}
                     <br><br>
-                    Признанные и поддерживаемые Посольством Республики Казахстан в Сингапуре и Посольством Республики Сингапур в Казахстане, мы организуем многочисленные сетевые мероприятия, бизнес-форумы, информационные семинары, общественные инициативы и поддерживаем ценные деловые отношения между нашими разнообразными членами - и все это с целью дать возможность каждому не не только открывают и развивают свой бизнес в обеих странах, но и ведут благополучную жизнь.</p>
+                    {% trans "Признанные и поддерживаемые Посольством Республики Казахстан в Сингапуре и Посольством Республики Сингапур в Казахстане, мы организуем многочисленные сетевые мероприятия, бизнес-форумы, информационные семинары, общественные инициативы и поддерживаем ценные деловые отношения между нашими разнообразными членами - и все это с целью дать возможность каждому не не только открывают и развивают свой бизнес в обеих странах, но и ведут благополучную жизнь." %}</p>
 
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-people flex-shrink-0"></i>
                     <div>
-                    <h4><a class="stretched-link">Знакомства</a></h4>
-                    <p>Знакомство с культурами Сингапура и Казахстана</p>
+                    <h4><a class="stretched-link">{% trans "Знакомства" %}</a></h4>
+                    <p>{% trans "Знакомство с культурами Сингапура и Казахстана" %}</p>
                     </div>
                 </div><!-- End Icon Box -->
 
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
                     <i class="bi bi-globe flex-shrink-0"></i>
                     <div>
-                    <h4><a class="stretched-link">Культурное обогащение</a></h4>
-                    <p>Культурные мероприятия, такие как концерты, выставки, туристические туры</p>
+                    <h4><a class="stretched-link">{% trans "Культурное обогащение" %}</a></h4>
+                    <p>{% trans "Культурные мероприятия, такие как концерты, выставки, туристические туры" %}</p>
                     </div>
                 </div><!-- End Icon Box -->
 
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-newspaper flex-shrink-0"></i>
                     <div>
-                    <h4><a class="stretched-link">Тематические следования</a></h4>
-                    <p>Знание об успехе Сингапура: тематические исследования, интервью, статьи, специальные мероприятия и многое другое</p>
+                    <h4><a class="stretched-link">{% trans "Тематические следования" %}</a></h4>
+                    <p>{% trans "Знание об успехе Сингапура: тематические исследования, интервью, статьи, специальные мероприятия и многое другое" %}</p>
                     </div>
                 </div><!-- End Icon Box -->
 
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
                     <i class="bi bi-patch-check flex-shrink-0"></i>
                     <div>
-                    <h4><a class="stretched-link">Осведомленность</a></h4>
-                    <p>Больше информации о будущем Казахстана и текущих политических и экономических событиях</p>
+                    <h4><a class="stretched-link">{% trans "Осведомленность" %}</a></h4>
+                    <p>{% trans "Больше информации о будущем Казахстана и текущих политических и экономических событиях" %}</p>
                     </div>
                 </div><!-- End Icon Box -->
             </div>
@@ -95,7 +96,7 @@
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Партнеры</h2>
+          <h2>{% trans "Партнеры" %}</h2>
         </div>
         <section id='clients' class="clients">
             <div class="container" data-aos="zoom-in">
@@ -131,7 +132,7 @@
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Стратегические партнеры</h2>
+          <h2>{% trans "Стратегические партнеры" %}</h2>
         </div>
         <section id='clients' class="clients">
             <div class="container" data-aos="zoom-in">
