--- a/ksbc/templates/about/word_of_chairman.html
+++ b/ksbc/templates/about/word_of_chairman.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Слова Основателя{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Слова Основателя" %}{% endblock title %}
 {% block content %}
 {% load static %}
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Слова Основателя</h2>
+            <h2>{% trans "Слова Основателя" %}</h2>
             <ol>
-            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-            <li>Слова Основателя</li>
+            <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+            <li>{% trans "Слова Основателя" %}</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
@@ -18,24 +19,24 @@
         <div class="container" data-aos="fade-up">
             <div class="row justify-content-around gy-4">
                 <div class="col-lg-5 d-flex flex-column justify-content-center">
-                    <h3>Султан Маренов</h3>
-                    <h5>Основатель и Исполнительный Директор</h5>
+                    <h3>{% trans "Султан Маренов" %}</h3>
+                    <h5>{% trans "Основатель и Исполнительный Директор" %}</h5>
                     <h5>sultan.marenov@ksbc.sg</h5>
-                    <p>Дорогие друзья,<br>
-                        Добро пожаловать в Казахстанско-Сингапурский деловой совет (KSBC).
+                    <p>{% trans "Дорогие друзья," %}<br>
+                        {% trans "Добро пожаловать в Казахстанско-Сингапурский деловой совет (KSBC)." %}
                         <br><br>
-                        KSBC - молодая организация, но наши члены - очень опытные предприниматели и руководители высшего звена в различных секторах экономики. Мы здесь для того, чтобы сблизить два быстрорастущих региона Юго-Восточной Азии и Центральной Азии, причем Сингапур и Казахстан являются хорошо известными воротами в оба региона. 
+                        {% trans "KSBC - молодая организация, но наши члены - очень опытные предприниматели и руководители высшего звена в различных секторах экономики. Мы здесь для того, чтобы сблизить два быстрорастущих региона Юго-Восточной Азии и Центральной Азии, причем Сингапур и Казахстан являются хорошо известными воротами в оба региона. " %}
                         <br><br>
-                        Обе страны обладают необходимой инфраструктурой, нормативно-правовой базой, основанной на лучших международных стандартах, и, самое главное, образованными, современными и активными людьми. Оба региона обладают уникальными особенностями и дополняют друг друга, в Юго-Восточной Азии наблюдается быстрый рост потребления из-за динамичного экономического роста и плотной численности населения, в то время как в Центральной Азии много полезных ископаемых и ресурсов агропромышленного комплекса, которые необходимы для современного и экологически чистого производства. 
+                        {% trans "Обе страны обладают необходимой инфраструктурой, нормативно-правовой базой, основанной на лучших международных стандартах, и, самое главное, образованными, современными и активными людьми. Оба региона обладают уникальными особенностями и дополняют друг друга, в Юго-Восточной Азии наблюдается быстрый рост потребления из-за динамичного экономического роста и плотной численности населения, в то время как в Центральной Азии много полезных ископаемых и ресурсов агропромышленного комплекса, которые необходимы для современного и экологически чистого производства. " %}
                         <br><br>
-                        Поэтому сейчас самое время начать более активную работу по многим направлениям деловых контактов. Мы призываем предпринимателей, компании и корпорации расширять деловое сотрудничество между Сингапуром и Казахстаном, находить новых партнеров и расширять географию присутствия. 
+                        {% trans "Поэтому сейчас самое время начать более активную работу по многим направлениям деловых контактов. Мы призываем предпринимателей, компании и корпорации расширять деловое сотрудничество между Сингапуром и Казахстаном, находить новых партнеров и расширять географию присутствия. " %}
                         <br><br>
-                        В дополнение к бизнесу, мы в KSBC считаем, что культурное сближение между сингапурцами и казахами также будет очень ценным. Для обоих государств все еще остается много неизвестного друг о друге, и мы стремимся исправить это.
+                        {% trans "В дополнение к бизнесу, мы в KSBC считаем, что культурное сближение между сингапурцами и казахами также будет очень ценным. Для обоих государств все еще остается много неизвестного друг о друге, и мы стремимся исправить это." %}
                         <br><br>
-                        Мы надеемся, что совместными усилиями мы сможем достичь многих целей и сделать много полезного для Сингапура, Казахстана и за его пределами.
+                        {% trans "Мы надеемся, что совместными усилиями мы сможем достичь многих целей и сделать много полезного для Сингапура, Казахстана и за его пределами." %}
                         <br><br>
-                        Ваш,<br>
-                        Султан Маренов</p>
+                        {% trans "Ваш" %},<br>
+                        {% trans "Султан Маренов" %}</p>
                 </div>
                 <div class="col-lg-6 img-bg" style="background-image: url({% static 'img/word-of-chairman-photo.png' %});" data-aos="zoom-in"
                 data-aos-delay="100"></div>
@@ -47,7 +48,7 @@
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Партнеры</h2>
+          <h2>{% trans "Партнеры" %}</h2>
         </div>
         <section id='clients' class="clients">
             <div class="container" data-aos="zoom-in">
@@ -83,7 +84,7 @@
 <section id="testimonials" class="testimonials section-bg">
     <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Стратегические партнеры</h2>
+          <h2>{% trans "Стратегические партнеры" %}</h2>
         </div>
         <section id='clients' class="clients">
             <div class="container" data-aos="zoom-in">
