--- a/ksbc/templates/users/profile.html
+++ b/ksbc/templates/users/profile.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Профиль{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Профиль" %}{% endblock %}
 {% block content %}
 {% load static %}
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Профиль</h2>
+            <h2>{% trans "Профиль" %}</h2>
             <ol>
-                <li><a href="{% url 'about:index' %}">Главная страница</a></li>
-                <li>Профиль</li>
+                <li><a href="{% url 'about:index' %}">{% trans "Главная страница" %}</a></li>
+                <li>{% trans "Профиль" %}</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
@@ -35,11 +36,11 @@
                 <ul class="nav nav-tabs nav-tabs-bordered">
   
                   <li class="nav-item">
-                    <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Общее</button>
+                    <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">{% trans "Общее" %}</button>
                   </li>
   
                   <li class="nav-item">
-                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Редактировать профиль</button>
+                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">{% trans "Редактировать профиль" %}</button>
                   </li>
   
                   {% comment %} <li class="nav-item">
@@ -50,50 +51,50 @@
                 <div class="tab-content pt-2">
   
                   <div class="tab-pane fade show active profile-overview" id="profile-overview">
-                    <h5 class="card-title">Данные профиля</h5>
+                    <h5 class="card-title">{% trans "Данные профиля" %}</h5>
                     
                     <div class="row">
-                        <div class="col-lg-3 col-md-4 label ">Имя пользователя</div>
+                        <div class="col-lg-3 col-md-4 label ">{% trans "Имя пользователя" %}</div>
                         <div class="col-lg-9 col-md-8">{{user.username}}</div>
                       </div>
 
                     <div class="row">
-                      <div class="col-lg-3 col-md-4 label ">ФИО</div>
+                      <div class="col-lg-3 col-md-4 label ">{% trans "ФИО" %}</div>
                       <div class="col-lg-9 col-md-8">{{user.first_name}} {{user.last_name}}</div>
                     </div>
   
                     <div class="row">
-                      <div class="col-lg-3 col-md-4 label">Название кампании</div>
+                      <div class="col-lg-3 col-md-4 label">{% trans "Название кампании" %}</div>
                       <div class="col-lg-9 col-md-8">{{user.company_name}}</div>
                     </div>
   
                     <div class="row">
-                      <div class="col-lg-3 col-md-4 label">Занимаемая должность</div>
+                      <div class="col-lg-3 col-md-4 label">{% trans "Занимаемая должность" %}</div>
                       <div class="col-lg-9 col-md-8">{{user.job_position}}</div>
                     </div>
   
                     <div class="row">
-                      <div class="col-lg-3 col-md-4 label">Электронная почта</div>
+                      <div class="col-lg-3 col-md-4 label">{% trans "Электронная почта" %}</div>
                       <div class="col-lg-9 col-md-8">{{user.email}}</div>
                     </div>
                     
-                    <h5 class='card-title'>Детали резиденства</h5>
+                    <h5 class='card-title'>{% trans "Детали резиденства" %}</h5>
                     <div class='row'>
                     {% if user_membership %}
-                        <div class="col-lg-3 col-md-4 label">Тип резиденства</div> 
+                        <div class="col-lg-3 col-md-4 label">{% trans "Тип резиденства" %}</div> 
                         <div class="col-lg-9 col-md-8">
                             {% if user_subscription %}
                                 {% if user_subscription.active %}
                                     {{ user_membership.membership.membership_type }} <small>с {{ user_subscription.get_created_date }}</small>
-                                    <p>Следующий платеж: {{ user_subscription.get_next_billing_date }}</p>
-                                    <a href='{% url 'membership:cancel' %}'>Отменить резиденство</a>
+                                    <p>{% trans "Следующий платеж:" %} {{ user_subscription.get_next_billing_date }}</p>
+                                    <a href='{% url 'membership:cancel' %}'>{% trans "Отменить резиденство" %}</a>
 
                                 {% else %}
-                                    <p>У вас нет активного резиденства. Ознакомьтесь с <a href='{% url 'membership:membership-list' %}'>резиденством здесь.</a></p>
+                                    <p>{% trans "У вас нет активного резиденства. Ознакомьтесь с" %} <a href='{% url 'membership:membership-list' %}'>{% trans "резиденством здесь." %}</a></p>
                                 {% endif %} 
                             
                             {% else %}
-                                    <p>У вас нет активного резиденства. Ознакомьтесь с <a href='{% url 'membership:membership-list' %}'>резиденством здесь.</a></p>
+                                    <p>{% trans "У вас нет активного резиденства. Ознакомьтесь с" %} <a href='{% url 'membership:membership-list' %}'>{% trans "резиденством здесь." %}</a></p>
                             {% endif %} 
                         </div>
                     </div>
@@ -107,35 +108,35 @@
                         {% csrf_token %}
                     
                         <div class="row mb-3">
-                            <label for="{{ form.first_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Имя</label>
+                            <label for="{{ form.first_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">{% trans "Имя" %}</label>
                             <div class="col-md-8 col-lg-9">
                                 {{ form.first_name }}
                             </div>
                         </div>
                         
                         <div class="row mb-3">
-                            <label for="{{ form.last_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Фамилия</label>
+                            <label for="{{ form.last_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">{% trans "Фамилия" %}</label>
                             <div class="col-md-8 col-lg-9">
                                 {{ form.last_name }}
                             </div>
                         </div>
 
                         <div class="row mb-3">
-                            <label for="{{ form.company_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Название компании</label>
+                            <label for="{{ form.company_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">{% trans "Название компании" %}</label>
                             <div class="col-md-8 col-lg-9">
                                 {{ form.company_name }}
                             </div>
                         </div>
                     
                         <div class="row mb-3">
-                            <label for="{{ form.job_position.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Занимаемая должность</label>
+                            <label for="{{ form.job_position.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">{% trans "Занимаемая должность" %}</label>
                             <div class="col-md-8 col-lg-9">
                                 {{ form.job_position }}
                             </div>
                         </div>
                     
                         <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+                        <button type="submit" class="btn btn-primary">{% trans "Сохранить изменения" %}</button>
                         </div>
                     </form><!-- End Profile Edit Form -->
   
